--- a/html5_css/CSS/styles.css
+++ b/html5_css/CSS/styles.css
@@ -50,7 +50,7 @@ nav a:hover {
 }
 
 footer {
-    background-color:#FBF9FC;
+    background-color:#050706;
     text-align: center;
     padding: 40px 0;
 
