--- a/advanced css and tables/CSS/styles.css
+++ b/advanced css and tables/CSS/styles.css
@@ -44,9 +44,8 @@ aside {
 }
 
 img {
-    width: 99%;
-    margin: 0 auto;
-    display: block;
+    width: 100%;
+    
     
     
 }
@@ -107,7 +106,9 @@ aside{
 }
 
 section{
-    width: 80%;
+    width: 100%;
+    text-align: center;
+    margin: auto;
 }
 aside{
     width: 10%;
@@ -118,7 +119,7 @@ aside{
 }
 
 #main_img_resize {
-                width: 100;
+                width: 100%;
 }
 
 #lower_area{
@@ -129,7 +130,7 @@ aside{
     border: 2px solid #F0EFED;
     margin: 20px;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 footer{
@@ -143,8 +144,8 @@ footer{
 .button {
     display: block;
     width: 100px;
-    height: 25px;
-    line-height: 25px;
+    height: 30px;
+    line-height: 30px;
     background-color: #F0EFED;
     color: #0D0D0D;
     text-decoration: #d6d6d6;
