--- a/advanced css and tables/CSS/styles.css
+++ b/advanced css and tables/CSS/styles.css
@@ -6,7 +6,7 @@ header {
 }
 
 header img {
-        width: 50%;
+        width: 33%;
 }
 
 html {
@@ -18,10 +18,10 @@ h1,
 h2,
 h3
  {
- color:#208FBD;
+ color:#F0EFED;
  font: 1.2em "Fira Sans", sans-serif;
  text-align: center;
- border: #F0EFED 2px solid;
+ border: #9c9c9c 2px solid;
 
 }
 
@@ -80,13 +80,13 @@ nav li{
 
 }
 nav li a{
-        display: block;
-        background-color: #F0EFED ;
+        display:block;
+        background-color:#F0EFED ;
         width: 200px;
-        height: 35px;
-        line-height: 35px;
-        font-size: larger;
-        border:#c4c4c4 solid 4px;
+        height: 40px;
+        line-height: 40px;
+        font-size:medium;
+        border: #9c9c9c solid 4px;
         border-style: groove;
         border-radius: 6px;
         
@@ -101,7 +101,7 @@ aside{
     margin: 20px;
     padding: 20px;
     border-style: groove;
-    border-radius: 5px;
+    
     
 }
 
@@ -131,33 +131,59 @@ aside{
     margin: 20px;
     padding: 20px;
     border-radius: 5px;
+    text-align: center;
 }
 
-footer{
+footer {
     background-color: #208FBD;
-    text-align: left;
-    padding: 40px 0;
+    text-align: center;
+    padding: 40px; 
     color: #000000;
     font-weight: bolder;
 }
 
 .button {
     display: block;
-    width: 100px;
-    height: 30px;
-    line-height: 30px;
+    width: 150px;
+    height: 15px;
+    line-height: 15px;
     background-color: #F0EFED;
     color: #0D0D0D;
     text-decoration: #d6d6d6;
     text-align:center;
-    padding: 12px;
-    margin: 12px;
+    padding: 8px;
+    margin: 8px;
     border: 4px solid #979393;
-    border-radius: 12px;
+    border-radius: 25px;
     border-style: groove;
 }
 
 .button:hover {
         background: #208FBD;
         border-color: #000000;
+}
+
+table {
+    border-color: #ffffff;
+    border-style: groove;
+    padding: 15x;
+    margin: 10px;
+    text-align: center;
+    
+}
+
+tr,td {
+    width: 100% auto;
+    border: 1px solid #208FBD;
+    padding: 15px;
+    margin: 15px;
+
+}
+
+td{
+    width:50%;
+}
+
+tr{
+    width: 40%;
 }
