--- a/Responsive web design/CSS/styles.css
+++ b/Responsive web design/CSS/styles.css
@@ -73,7 +73,7 @@ nav li a:hover {
   text-decoration: none;
   font: 1.0em sans-serif;
   padding: 5px 0;
-  border-color: #3b3636;
+  border-color:#f0efed;
   border-width: 20px;
 }
 
