--- a/styles.css
+++ b/styles.css
@@ -1,197 +1,188 @@
-body {
-  background-color: #000000;
+header {
+    text-align: center;
+    color: #F0EFED;
+    padding: 5%;
+    font-size: larger;
 }
 
 header img {
-  width: 50%;
+       width: 33%;
 }
 
-img {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
+html {
+   background-color:#0D0D0D;
+   
 }
 
 h1,
 h2,
-h3 {
-  color: #f0efed;
-  font: 1.2em "Fira Sans", sans-serif;
-  text-align: center;
-  border: #9c9c9c 2px solid;
+h3
+{
+color:#F0EFED;
+font: 1.2em "Fira Sans", sans-serif;
+text-align: center;
+border: #9c9c9c 2px solid;
+
 }
+
 
 h4 {
-  color: #f0efed;
-  font-size: larger;
-  font: 1.2em "Fira Sans", sans-serif;
-  font: italic 1.2em "Fira Sans", serif;
-  text-align: center;
-}
-
-#container {
-  background-color: #000000;
-}
-
-nav {
-  background-color: #000000;
-  text-decoration: none;
-  margin: 10px;
-  color: #208fbd;
-  text-align: center;
-}
-
-nav ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-nav li {
-  display: block;
-}
-
-nav li a {
-  display: block;
-  height: 40px;
-  background-color: #f0efed;
-  color: #1f2373;
-  line-height: 40px;
-  text-decoration: none;
-  font-size: larger;
-  border: #868686 solid 4px;
-  border-style: groove;
-  border-radius: 6px;
-  padding: 8px 0;
-}
-
-nav li a:hover {
-  display: block;
-  height: 25px;
-  line-height: 25px;
-  background-color:#f0efed;
-  color:#1f2373;
-  text-decoration: none;
-  font: 1.0em sans-serif;
-  padding: 5px 0;
-  border-color:#f0efed;
-  border-width: 20px;
-}
-
-main {
-  padding: 20px;
-}
-main img {
-  width: 100%;
-}
-
-.col {
-  padding: 10px;
-}
-
-footer {
-  background-color: #208fbd;
-  text-align: center;
-  color: #000000;
-  font-weight: bold;
-  padding: 40px 0;
-}
-
-.button {
-  display: block;
-  width: 150px;
-  height: 15px;
-  line-height: 15px;
-  background-color: #f0efed;
-  color: #0d0d0d;
-  text-decoration: #d6d6d6;
-  text-align: center;
-  padding: 8px;
-  margin: 8px;
-  border: 4px solid #979393;
-  border-radius: 25px;
-  border-style: groove;
-}
-
-.button:hover {
-  background: #208fbd;
-  border-color: #000000;
+   color: #F0EFED;
+   font-size: larger;
+   font: 1.2em "Fira Sans", sans-serif;
+   font: italic 1.2em "Fira Sans", serif;
+   text-align: center;
+   
 }
 
 p {
-  color: #f0efed;
+ color: #F0EFED;
 }
 
 aside {
-  color: #f0efed;
+   color: #F0EFED;
+}
+
+img {
+   width: 100%;
+   
+   
+   
+}
+
+body{
+   background-color: #000000;
+}
+a {
+   color: #000000;
+   text-decoration: none;
+}
+footer {
+   color: #208FBD;
+   text-align:center
+}
+
+nav {
+   background-color: #000000;
+   text-decoration: none;
+   margin: 10px;
+   color: #208FBD;
+   text-align: center;
+}
+
+nav ul{
+   padding: 10px;
+   list-style-type: none;
+}
+nav li{
+   display: inline-block;
+   
+
+}
+nav li a{
+       display:block;
+       background-color:#F0EFED ;
+       width: 200px;
+       height: 40px;
+       line-height: 40px;
+       font-size:medium;
+       border: #9c9c9c solid 4px;
+       border-style: groove;
+       border-radius: 6px;
+       
+}
+
+main{
+   display: flex;
+}
+section,
+aside{
+   border: #208FBD 2px solid;
+   margin: 20px;
+   padding: 20px;
+   border-style: groove;
+   
+   
+}
+
+section{
+   width: 100%;
+   text-align: center;
+   margin: auto;
+}
+aside{
+   width: 10%;
+}
+
+.single_page {
+       width: 50%;
+}
+
+#main_img_resize {
+               width: 100%;
+}
+
+#lower_area{
+   display: flex;
+}
+
+.col{
+   border: 2px solid #F0EFED;
+   margin: 20px;
+   padding: 20px;
+   border-radius: 5px;
+   text-align: center;
+}
+
+footer {
+   background-color: #208FBD;
+   text-align: center;
+   padding: 40px; 
+   color: #000000;
+   font-weight: bolder;
+}
+
+.button {
+   display: block;
+   width: 150px;
+   height: 15px;
+   line-height: 15px;
+   background-color: #F0EFED;
+   color: #0D0D0D;
+   text-decoration: #d6d6d6;
+   text-align:center;
+   padding: 8px;
+   margin: 8px;
+   border: 4px solid #979393;
+   border-radius: 25px;
+   border-style: groove;
+}
+
+.button:hover {
+       background: #208FBD;
+       border-color: #000000;
 }
 
 table {
-  border: #f0efed;
+   border-color: #ffffff;
+   border-style: groove;
+   padding: 15px;
+   margin: 10px;
+   text-align: center;
+   
 }
 
-tr,
-td {
-  width: 50%;
-  border: 1px groove #208fbd;
+tr,td {
+   width: 100%;
+   border: 1px solid #208FBD;
+   padding: 15px;
+   margin: 15px;
+
 }
 
-@media (min-width: 768px) {
-  #container {
-    background-color: #000000;
-  }
-  nav li {
-    display: inline-block;
-    border: 0;
-  }
-  nav li a {
-    width: 175px;
-    margin: 10px 5px;
-    border: #868686 2px solid;
-  }
-
-  main {
-    display: flex;
-  }
-
-  section,
-  aside {
-    border: #208fbd 2px solid;
-    margin: 10px;
-    padding: 10px;
-    border-style: groove;
-    border-radius: 10px;
-  }
-  .col img {
-    width: 75%;
-  }
-
-  .button {
-    margin-left: auto;
-    margin-right: auto;
-  }
+td{
+   width:50%;
 }
 
-@media (min-width: 1024px) {
-  #container {
-    width: 65%;
-    margin: 20px auto;
-  }
-  nav li a {
-    background-color: #000000;
-    border: 0;
-  }
-
-  #lower_area {
-    display: flex;
-  }
-  .col {
-    border: 2px solid #8a8a8a;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-  }
-
-  .single_page {
-    width: 100%;
-  }
-}
+tr{
+   width: 40%;}
