--- a/intro_to_html/Final Project/CSS/styles.css
+++ b/intro_to_html/Final Project/CSS/styles.css
@@ -21,14 +21,13 @@ img {
 h1,
 h2,
 h3 {
-  color: #000000;
+  color: #ffffff;
   text-align: center;
   border: #888585 2px solid;
   font-family: 'Monoton', cursive;
   font-weight:lighter;
   font-size: larger;
   border-width: 1px;
-  
 }
 
 h4 {
@@ -101,7 +100,7 @@ main img {
 footer {
   background-color: #ffffff;
   text-align: center;
-  color: #000000;
+  color: #696969;
   font-weight: bold;
   padding: 40px 0;
 }
@@ -112,7 +111,7 @@ footer {
   height: 15px;
   line-height: 15px;
   background-color: #f0efed;
-  color: #0d0d0d;
+  color: #808080;
   text-decoration: #d6d6d6;
   text-align: center;
   padding: 8px;
@@ -128,11 +127,11 @@ footer {
 }
 
 p {
-  color: #000000;
+  color: #dadada;
 }
 
 aside {
-  color: #000000;
+  color: #bdbdbd;
 }
 
 table {
